# RoboRacer

./: .gitignore  CONTRIBS.md  README (2).md  README (3).md  README.md  README1.md  README_project.md  Requirements.txt
milestone1/: CMakeLists.txt  package.xml  setup.py
milestone1/launch/: milestone1_cpp.py  milestone1_py.py
milestone1/scripts/: auto_drive_node.py  safety_node.py
milestone1/src/: safety_node.cpp
milestone2/: CMakeLists.txt  README.md  package.xml
milestone2/launch/: milestone2_cpp.py  milestone2_py.py
milestone2/scripts/: auto_drive_node.py
milestone3/: CMakeLists.txt  README.md  package.xml
milestone3/launch/: milestone3_py.py
milestone3/scripts/: camera_drive_node.py  depth_detection_node.py
milestone3/src/: auto_drive_node.cpp
milestone4/: CMakeLists.txt  README.md  package.xml
milestone4/launch/: milestone4_cpp.py  milestone4_py.py
milestone4/scripts/: auto_drive_node.py  auto_drive_node_fast.py  auto_drive_node_slow.py  sign_detect_node.py
milestone4/src/: auto_drive_node.cpp
milestone5/: CMakeLists.txt  package.xml
milestone5/launch/: milestone5_cpp.py  milestone5_py.py  setup.py
milestone5/scripts/: auto_drive_node.py  auto_drive_node_fast.py  auto_drive_node_slow.py  sign_detect_node.py  u_turn.py
milestone5/yolo11s_model/train2/: args.yaml  results.csv
project/: CMakeLists.txt  README.md  package.xml
project/launch/: project_cpp.py  project_py.py
project/scripts/: auto_drive_node.py  object_detection_node.py  parallel_park.py  sign_detect_node.py
project/yolo11s_model/train2/: events.out.tfevents.1742502088.fdbd23a32a33.2048.0
